--- a/index.html
+++ b/index.html
@@ -6,24 +6,23 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Чекер для резюме</title>
-    <script src="https://unpkg.com/petite-vue" defer init></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.min.js" integrity="sha512-LhccdVNGe2QMEfI3x4DVV3ckMRe36TfydKss6mJpdHjNFiV07dFpS2xzeZedptKZrwxfICJpez09iNioiSZ3hA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <title>Генератор для резюме</title>
+    <script src="https://unpkg.com/petite-vue" type="text/javascript" defer init ></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.min.js" integrity="sha512-LhccdVNGe2QMEfI3x4DVV3ckMRe36TfydKss6mJpdHjNFiV07dFpS2xzeZedptKZrwxfICJpez09iNioiSZ3hA==" type="text/javascript" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <!-- Загружаем компоненты -->
-    <script src="components/app.js" ></script>
-    <script src="components/checklist.js" ></script>
-    <script src="components/checkform.js" ></script>
-    <script src="components/legend.js" ></script>
-    <script src="components/personal.js" ></script>
-    <script src="components/cover.js" ></script>
-    <script src="components/basicinfo.js" ></script>
-    <script src="components/experiancereal.js" ></script>
+    <script src="components/app.js" type="text/javascript"></script>
+    <script src="components/checklist.js" type="text/javascript"></script>
+    <script src="components/checkform.js" type="text/javascript"></script>
+    <script src="components/legend.js" type="text/javascript"></script>
+    <script src="components/personal.js" type="text/javascript"></script>
+    <script src="components/cover.js" type="text/javascript"></script>
+    <script src="components/basicinfo.js" type="text/javascript"></script>
+    <script src="components/experiencereal.js" type="text/javascript"></script>
     <!-- Загружаем стили -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="assets/style.css" type="text/css">
 
 </head>
 <body>
