--- a/index.html
+++ b/index.html
@@ -1,161 +1,125 @@
 <!doctype html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Генератор для резюме</title>
-    <script src="https://unpkg.com/petite-vue" type="text/javascript" defer init ></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.min.js" integrity="sha512-LhccdVNGe2QMEfI3x4DVV3ckMRe36TfydKss6mJpdHjNFiV07dFpS2xzeZedptKZrwxfICJpez09iNioiSZ3hA==" type="text/javascript" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <title>Генератор для резюме</title>
+<!--  <script src="/assets/petite-vue.js" type="text/javascript" defer init ></script>-->
+  <script src="/assets/axios.min.js" type="text/javascript"></script>
+  <script src="/assets/showdown.min.js" type="text/javascript"></script>
 
-    <!-- Загружаем компоненты -->
-    <script src="components/app.js" type="text/javascript"></script>
-    <script src="components/checklist.js" type="text/javascript"></script>
-    <script src="components/checkform.js" type="text/javascript"></script>
-    <script src="components/legend.js" type="text/javascript"></script>
-    <script src="components/personal.js" type="text/javascript"></script>
-    <script src="components/cover.js" type="text/javascript"></script>
-    <script src="components/basicinfo.js" type="text/javascript"></script>
-    <script src="components/experiencereal.js" type="text/javascript"></script>
-    <!-- Загружаем стили -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="assets/style.css" type="text/css">
+  <!-- Загружаем компоненты -->
+  <script src="components/app.js" type="text/javascript"></script>
+  <script src="components/bio_section.js" type="text/javascript"></script>
+  <script src="components/skills_section.js" type="text/javascript"></script>
+  <script src="components/legend_section.js" type="text/javascript"></script>
+  <script src="components/previous_job_section.js" type="text/javascript"></script>
+  <script src="components/education_section.js" type="text/javascript"></script>
+  <script src="components/about_section.js" type="text/javascript"></script>
+  <script src="components/photo_section.js" type="text/javascript"></script>
+  <script src="components/checklist_section.js" type="text/javascript"></script>
+  <script src="components/cover_section.js" type="text/javascript"></script>
+  <script src="components/publish_section.js" type="text/javascript"></script>
+
+  <!-- Загружаем стили -->
+  <link rel="stylesheet" href="/assets/bootstrap.min.css" type="text/css">
+  <link rel="stylesheet" href="assets/style.css" type="text/css">
 
 </head>
 <body>
 
+<div class="container mt-4" id="app" v-scope="App()" @vue:mounted="mounted()">
 
-<main class="container mt-4" id="app" v-scope="App()">
+  <div class="row">
+    <main class="col-lg-8 col-xs-12 mb-5">
+      <div class="card" >
 
-    <p class="mt-3"><small>ID Ученика</small></p>
-    <section >
-        <div class="row">
-            <div class="col-9">
-                <input type="text" v-model="model.student_id" class="form-control">
-            </div>
-            <div class="col-3">
-                <input v-model="model.is_preview_mode_on" type="checkbox" class="btn-check" id="btn-check-outlined" autocomplete="off">
-                <label class="btn  btn-outline-primary w-100" for="btn-check-outlined">Превью</label><br>
-            </div>
+        <div class="card-header">
+          <small>  Информация загружена из вашей анкеты для карьерного центра, но вы можете отредактировать ее так, как вам нравится.</small>
         </div>
-    </section>
+
+        <div class="list-group list-group-flush">
+
+          <section class="list-group-item p-4" v-scope="BioSection(store)"></section>
+
+          <section class="list-group-item p-4 pb-1" v-scope="SkillsSection(store)"></section>
+
+          <section class="list-group-item  p-4 clearfix" v-scope="LegendSection(store)"></section>
+
+          <section class="list-group-item p-4 pb-1" v-scope="PreviousJobSection(store)"></section>
+
+          <section class="list-group-item p-4 pb-4" v-scope="EducationSection(store)"> </section>
+
+          <section class="list-group-item p-4 pb-4" v-scope="AboutSection(store, app)"></section>
+
+          <section class="list-group-item p-4 pb-4" v-scope="PhotoSection(store)"></section>
+
+          <section class="list-group-item">
+
+            <h3>Готовое резюме</h3>
+            <article v-html="model.resume"></article>
+
+          </section>
+
+        </div>
+      </div>
+    </main>
+
+    <aside class="col-lg-4 col-xs-12">
+
+      <div class="card" >
+
+        <div class="list-group list-group-flush p-2">
+
+          <section class="list-group-item" v-scope="ChecklistSection(store)"></section>
+
+          <section class="list-group-item" v-scope="CoverSection(store)"></section>
+
+          <section class="list-group-item" v-scope="PublishSection(store)"></section>
 
 
-
-    <div class="row">
-
-        <article class="col-9">
-
-            <!--  Поле с резюме   -->
-            <div class="mt-3">
-                <div v-if="!model.is_preview_mode_on">
-                    <textarea v-model="model.resume" rows=20 class="form-control" placeholder="Здесь будет текст резюме"></textarea>
-                </div>
-
-                <div v-if="model.is_preview_mode_on">
-                    <div v-html="model.resume_preview" class="preview"><h1>123</h1> {{model.resume_preview}} </div>
-                </div>
-            </div>
-
-        </article>
-
-        <aside class="col-3">
-
-
-            <section v-scope="BasicInfo()" >
-                <h6>Базовая инфа</h6>
-                <button @click="loadBasicInfo" class="btn btn-primary" >Загрузить инфо</button>
-            </section>
-
-            <section v-scope="ExperienceReal()" class="mt-3 mb-3">
-                <h6>Работа до Skypro</h6>
-                <button @click="loadExperience" class="btn btn-primary" >
-                    <span v-if="!model.isLoading">Сгенерировать</span>
-                    <span v-if="model.isLoading">Идет генерация... </span>
-                </button>
-            </section>
-
-            <section v-scope="Legend()" class="mt-3 mb-3">
-                <h6>Легенда</h6>
-
-                <div class="mt-3 mb-3"><select v-model="model.legend_type" class="form-control">
-                    <option value="ITDEPARTMENT">Работа в IT отделе работодателя</option>
-                    <option value="INTERNSHIP">Стажировка по новой специальности</option>
-                    <option value="FREELANCE">Фриланс проекты</option>
-                    <option value="NO">Без легенды</option>
-                </select></div>
-
-                <p class="mt-3">
-                    <button @click="loadLegend" class="btn btn-primary" >
-                        <span v-if="!model.isLoading">Сгенерировать</span>
-                        <span v-if="model.isLoading">Идет генерация... </span>
-                    </button>
-                <p>
-
-            </section>
-
-            <section v-scope="Personal()" class="mt-3" >
-
-                <h6 class="mb-3">Блок "О себе"</h6>
-
-                <button @click="loadPersonal" class="btn btn-primary" >
-                    <span v-if="!model.isLoading">Сгенерировать</span>
-                    <span v-if="model.isLoading">Идет генерация... </span>
-                </button>
-
-            </section>
-
-        </aside>
-    </div>
-
-    <details v-scope="CheckForm()" >
-
-        <summary>Проверка резюме с помощью ИИ</summary>
-
-        <p>
-            <select v-model="model.profession" class="form-control" >
-                <option value="DA" selected>Аналитик данных</option>
-                <option value="PD">Python Developer</option>
-                <option value="JD">Java Developer</option>
-            </select>
-        </p>
-
-        <p v-if="model.isLoading">Загружаем данные, займет до минуты</p>
-
-        <button @click="loadData" class="btn btn-primary" v-if="!model.isLoading">Проверить резюме</button>
-
-        <div v-scope="Checklist()">
-
-            <ul  v-if="model.isLoaded">
-                <li v-for="checkpoint in model.checklist">
-                    <span v-if="checkpoint.value==1"> ✅ </span>
-                    <span v-if="checkpoint.value==0"> ❌ </span>
-                    <span v-if="checkpoint.value==0.5"> 🤔 </span>
-                    {{ checkpoint.title }}
-                </li>
-            </ul>
 
         </div>
 
-    </details>
+      </div>
 
-    <details v-scope="Cover()" class="mt-3">
-        <summary >Генерация сопроводительного ковра</summary>
+    </aside>
+  </div>
 
-        <p><textarea v-if="model.cover!=''" v-model="model.cover" class="form-control" placeholder="Здесь будет сопроводительное"></textarea></p>
-
-        <p><small>Ссылка на вакансию на HH</small></p>
-        <p><input type="text" v-model="model.vacancy_link" class="form-control"></p>
-        <p><button @click="loadCover" class="btn btn-sm btn-primary" >Сгенерировать </button></p>
-    </details>
-
-
-</main>
 </div>
 
+
+<script type="module">
+
+  import { createApp, reactive } from '/assets/petite-vue.js'
+
+  const state = {
+    sections: {
+      about: "ready",
+      bio: "ready",
+      check: "ready",
+      cover: "ready",
+      legend: "ready",
+      recent: "ready",
+      photo: "ready",
+      previous_job: "ready",
+      checklist: "ready",
+    },
+
+    setStatus(section, status){
+      this.sections[section] = status
+      console.log("status changed")
+    }
+  }
+
+  const store = reactive(state)
+
+  const app = createApp({ store }).mount("#app")
+
+</script>
 
 </body>
 </html>
