feedback form added

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 
 <div class="container mt-4" id="app" v-scope="App(store)" @vue:mounted="mounted()">
 
+  <div class="alert alert-info">
+    Поделитесь с нами своим опытом использования инструмента, пожалуйста! <a href="https://docs.google.com/forms/d/e/1FAIpQLSfKJVifTtyzZfMHfmpxwKOhfv2jK9OJR0bYCwQpc64kd5oibg/viewform" target="_blank">Заполнить анкету</a>
+  </div>
+
   <div class="row">
     <main class="col-lg-8 col-xs-12 mb-5">
 
@@ -85,7 +89,9 @@
       </div>
 
     </aside>
-  </div>
+  </div> <!-- /row -->
+
+
 
 </div>
 
