fix uninteractive buttons, error display improved

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
       photo: "ready",
       previous_job: "ready",
       checklist: "ready",
+      publish: "ready",
     },
 
     setStatus(section, status){
