--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
 <div class="container mt-4" id="app" v-scope="App(store)" @vue:mounted="mounted()">
 
   <div class="alert alert-info">
-    Поделитесь с нами своим опытом использования инструмента, пожалуйста! <a href="https://docs.google.com/forms/d/e/1FAIpQLSfKJVifTtyzZfMHfmpxwKOhfv2jK9OJR0bYCwQpc64kd5oibg/viewform" target="_blank">Заполнить анкету</a>
+    Видеоинструкции:
+    1. <a href="https://drive.google.com/file/d/15Gk53Z26IIApqMHisuy1NF5e3wVBMvlh/view?usp=drive_link" target="_blank" class="link-dark">Как создавать резюме</a>
+    2. <a href="https://drive.google.com/file/d/13AM1ZXXQ56VeF4b-7uhBQbZ3iy5vnGqL/view?usp=drive_link" target="_blank" class="link-dark">Как публиковать резюме<a>.
+    Поделитесь с нами впечатлениями: <a href="https://docs.google.com/forms/d/e/1FAIpQLSfKJVifTtyzZfMHfmpxwKOhfv2jK9OJR0bYCwQpc64kd5oibg/viewform" target="_blank" class="link-dark">Заполнить анкету</a>
   </div>
 
   <div class="row">
